compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_size_not_int_variable.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 190
expression: "let a = 2.0 case <<1>> { <<1:size(a)>> -> a }"
snapshot_kind: text
---
----- SOURCE CODE
let a = 2.0 case <<1>> { <<1:size(a)>> -> a }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:35
  │
1 │ let a = 2.0 case <<1>> { <<1:size(a)>> -> a }
  │                                   ^

Expected type:

    Int

Found type:

    Float
